[package]
authors = ["Sebastian Wicki <gandro@gmx.net>"]
name = "grpcdump"
version = "0.1.0"

[dependencies]
clap = "2.30.0"
env_logger = "0.5.4"
failure = "0.1.1"
futures = "0.1.18"
pcap = "0.7.0"
tokio-core = "0.1.12"
tokio-io = "0.1.5"

[dependencies.smoltcp]
default-features = false
version = "0.4"

[dependencies.h2]
features = ["unstable"]
version = "0.1"
